// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renderWorktreesSurface structural snapshot — empty 1`] = `
<Box
  borderColor="cyan"
  borderStyle="round"
  flexDirection="column"
  flexShrink={0}
  paddingX={1}
  width={120}
>
  <Box
    justifyContent="space-between"
  >
    <Text
      bold={true}
    >
      Worktrees *
    </Text>
    <Text
      dimColor={true}
    >
      0/0 worktrees
    </Text>
  </Box>
  <Text
    dimColor={true}
  >
    No linked worktrees.
  </Text>
</Box>
`;

exports[`renderWorktreesSurface structural snapshot — populated 1`] = `
<Box
  borderColor="cyan"
  borderStyle="round"
  flexDirection="column"
  flexShrink={0}
  paddingX={1}
  width={120}
>
  <Box
    justifyContent="space-between"
  >
    <Text
      bold={true}
    >
      Worktrees *
    </Text>
    <Text
      dimColor={true}
    >
      1/1 worktrees
    </Text>
  </Box>
  <Text
    bold={true}
    dimColor={false}
  >
    &gt; * main     clean  /repo
  </Text>
</Box>
`;
